deleted saving models in eliona due to file being to big made an api for saving models in /tmp
